Fixes #26: Replace anonymous ArrayList subclasses with List.of()