@@ -22,7 +22,7 @@ public class IfFalseProjection extends AbstractControlNode<ControlToken> impleme
 
     @Override
     public List<Node<?>> getPredecessors() {
-        return Collections.singletonList(getControl());
+        return List.of(getControl());
     }
 
     @Override
